services/aemo-v3/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aemo-v3
  labels:
    name: aemo-v3
    app: aemo-v3
